@@ -1,24 +1,37 @@
 package com.anjia.unidbgserver.utils;
 
 import com.anjia.unidbgserver.config.FQApiProperties;
+import com.anjia.unidbgserver.dto.FQDirectoryRequest;
 import com.anjia.unidbgserver.dto.FQSearchRequest;
 import com.anjia.unidbgserver.dto.FqVariable;
-import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
+import java.nio.charset.StandardCharsets;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
-import java.util.*;
+import java.util.HashMap;
+import java.util.LinkedHashMap;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Set;
+import java.util.function.Function;
 
 /**
  * FQ API 通用工具类
  * 用于构建API请求参数和请求头
  */
 @Component
-@RequiredArgsConstructor
 public class FQApiUtils {
 
+    private static final String HEADER_AUTHORIZATION = "authorization";
+    private static final String HEADER_X_READING_REQUEST = "x-reading-request";
+    private static final String AUTHORIZATION_BEARER = "Bearer";
+
     private final FQApiProperties fqApiProperties;
+
+    public FQApiUtils(FQApiProperties fqApiProperties) {
+        this.fqApiProperties = fqApiProperties;
+    }
 
     /**
      * 构建通用API请求参数
@@ -28,7 +41,7 @@ public class FQApiUtils {
      * @return 参数映射
      */
     public Map<String, String> buildCommonApiParams(FqVariable var) {
-        Map<String, String> params = new HashMap<>();
+        Map<String, String> params = new HashMap<>(32);
 
         // 基础设备参数
         params.put("iid", var.getInstallId());
@@ -107,21 +120,17 @@ public class FQApiUtils {
      */
     public Map<String, String> buildCommonHeaders(long currentTime) {
         // 注意：签名算法对 header key 的大小写/顺序可能敏感；这里尽量对齐抓包/测试样例（小写 + 固定顺序）
-        Map<String, String> headers = new LinkedHashMap<>();
+        Map<String, String> headers = new LinkedHashMap<>(16);
         FQApiProperties.RuntimeProfile runtimeProfile = fqApiProperties.getRuntimeProfile();
-        FQApiProperties.Device device = runtimeProfile != null ? runtimeProfile.getDevice() : null;
-        String installId = device != null ? device.getInstallId() : null;
+        FQApiProperties.Device device = safeGet(runtimeProfile, FQApiProperties.RuntimeProfile::getDevice);
+        String installId = safeGet(device, FQApiProperties.Device::getInstallId);
 
         // 标准请求头（顺序参考抓包 header block）
         headers.put("accept", "application/json; charset=utf-8,application/x-protobuf");
-        String cookie = CookieUtils.normalizeInstallId(runtimeProfile != null ? runtimeProfile.getCookie() : null, installId);
-        if (cookie != null) {
-            headers.put("cookie", cookie);
-        }
-        String userAgent = runtimeProfile != null ? runtimeProfile.getUserAgent() : null;
-        if (userAgent != null) {
-            headers.put("user-agent", userAgent);
-        }
+        String cookie = CookieUtils.normalizeInstallId(safeGet(runtimeProfile, FQApiProperties.RuntimeProfile::getCookie), installId);
+        putIfNotNull(headers, "cookie", cookie);
+        String userAgent = safeGet(runtimeProfile, FQApiProperties.RuntimeProfile::getUserAgent);
+        putIfNotNull(headers, "user-agent", userAgent);
         headers.put("accept-encoding", "gzip");
         headers.put("x-xs-from-web", "0");
         headers.put("x-vc-bdturing-sdk-version", "3.7.2.cn");
@@ -132,9 +141,8 @@ public class FQApiUtils {
         headers.put("lc", "101");
         headers.put("x-ss-req-ticket", String.valueOf(currentTime));
         headers.put("passport-sdk-version", "50564");
-        if (device != null && device.getAid() != null) {
-            headers.put("x-ss-dp", device.getAid());
-        }
+        String aid = safeGet(device, FQApiProperties.Device::getAid);
+        putIfNotNull(headers, "x-ss-dp", aid);
 
         return headers;
     }
@@ -145,19 +153,19 @@ public class FQApiUtils {
      */
     public Map<String, String> buildSearchHeaders() {
         Map<String, String> base = buildCommonHeaders();
-        if (base.containsKey("authorization")) {
+        if (base.containsKey(HEADER_AUTHORIZATION)) {
             return base;
         }
 
-        Map<String, String> ordered = new LinkedHashMap<>();
+        Map<String, String> ordered = new LinkedHashMap<>(base.size() + 1);
         for (Map.Entry<String, String> entry : base.entrySet()) {
             ordered.put(entry.getKey(), entry.getValue());
-            if ("x-reading-request".equalsIgnoreCase(entry.getKey())) {
-                ordered.put("authorization", "Bearer");
+            if (HEADER_X_READING_REQUEST.equalsIgnoreCase(entry.getKey())) {
+                ordered.put(HEADER_AUTHORIZATION, AUTHORIZATION_BEARER);
             }
         }
-        if (!ordered.containsKey("authorization")) {
-            ordered.put("authorization", "Bearer");
+        if (!ordered.containsKey(HEADER_AUTHORIZATION)) {
+            ordered.put(HEADER_AUTHORIZATION, AUTHORIZATION_BEARER);
         }
         return ordered;
     }
@@ -196,9 +204,9 @@ public class FQApiUtils {
      * @param params 参数映射
      * @return 完整URL
      */
-    private static final Set<String> ENCODE_WHITELIST = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(
+    private static final Set<String> ENCODE_WHITELIST = Set.of(
         "query", "client_ab_info", "search_source_id", "search_id", "device_type", "resolution", "rom_version"
-    )));
+    );
 
     public String buildUrlWithParams(String baseUrl, Map<String, String> params) {
         if (params == null || params.isEmpty()) {
@@ -220,7 +228,7 @@ public class FQApiUtils {
             if (ENCODE_WHITELIST.contains(key)) {
                 urlBuilder.append(encodeIfNeeded(value));
             } else {
-                urlBuilder.append(value != null ? value : "");
+                urlBuilder.append(Texts.nullToEmpty(value));
             }
             first = false;
         }
@@ -232,85 +240,78 @@ public class FQApiUtils {
      * 对参数值进行编码（已编码过的不再编码）
      */
     private String encodeIfNeeded(String value) {
-        if (value == null) return "";
+        if (value == null) {
+            return "";
+        }
         try {
             // 先尝试解码，如果解码后与原值不同，说明已编码
-            String decoded = URLDecoder.decode(value, "UTF-8");
+            String decoded = URLDecoder.decode(value, StandardCharsets.UTF_8);
             if (!decoded.equals(value)) {
                 return value; // 已编码，直接返回
             }
+        } catch (IllegalArgumentException ignored) {
+            // 解码失败，按未编码处理并继续尝试编码
+        }
+        try {
             // 未编码，进行编码
-            return URLEncoder.encode(value, "UTF-8");
-        } catch (Exception e) {
-            // 解码失败，尝试直接编码
-            try {
-                return URLEncoder.encode(value, "UTF-8");
-            } catch (Exception ex) {
-                return value;
-            }
+            return URLEncoder.encode(value, StandardCharsets.UTF_8);
+        } catch (Exception ex) {
+            return value;
         }
     }
 
-public Map<String, String> buildSearchParams(FqVariable var, FQSearchRequest searchRequest) {
-    Map<String, String> params = buildCommonApiParams(var);
+    public Map<String, String> buildSearchParams(FqVariable var, FQSearchRequest searchRequest) {
+        Map<String, String> params = buildCommonApiParams(var);
 
-    // 搜索特定参数，全部补齐，部分可动态生成
-    params.put("bookshelf_search_plan", String.valueOf(searchRequest.getBookshelfSearchPlan()));
-    params.put("offset", String.valueOf(searchRequest.getOffset()));
-    params.put("from_rs", bool01(searchRequest.getFromRs()));
-    params.put("user_is_login", String.valueOf(searchRequest.getUserIsLogin()));
-    params.put("bookstore_tab", String.valueOf(searchRequest.getBookstoreTab()));
-    params.put("query", searchRequest.getQuery()); // 中文需编码，建议提前处理
-    params.put("count", String.valueOf(searchRequest.getCount()));
-    params.put("search_source", String.valueOf(searchRequest.getSearchSource()));
-    params.put("clicked_content", searchRequest.getClickedContent());
-    params.put("search_source_id", searchRequest.getSearchSourceId());
-    params.put("use_lynx", bool01(searchRequest.getUseLynx()));
-    params.put("use_correct", bool01(searchRequest.getUseCorrect()));
-    params.put("last_search_page_interval", String.valueOf(searchRequest.getLastSearchPageInterval()));
-    params.put("line_words_num", String.valueOf(searchRequest.getLineWordsNum()));
-    params.put("tab_name", searchRequest.getTabName());
-    params.put("last_consume_interval", String.valueOf(searchRequest.getLastConsumeInterval()));
-    params.put("pad_column_cover", String.valueOf(searchRequest.getPadColumnCover()));
-    params.put("is_first_enter_search", bool01(searchRequest.getIsFirstEnterSearch()));
+        // 搜索特定参数，全部补齐，部分可动态生成
+        params.put("bookshelf_search_plan", String.valueOf(searchRequest.getBookshelfSearchPlan()));
+        params.put("offset", String.valueOf(searchRequest.getOffset()));
+        params.put("from_rs", bool01(searchRequest.getFromRs()));
+        params.put("user_is_login", String.valueOf(searchRequest.getUserIsLogin()));
+        params.put("bookstore_tab", String.valueOf(searchRequest.getBookstoreTab()));
+        params.put("query", searchRequest.getQuery()); // 中文需编码，建议提前处理
+        params.put("count", String.valueOf(searchRequest.getCount()));
+        params.put("search_source", String.valueOf(searchRequest.getSearchSource()));
+        params.put("clicked_content", searchRequest.getClickedContent());
+        params.put("search_source_id", searchRequest.getSearchSourceId());
+        params.put("use_lynx", bool01(searchRequest.getUseLynx()));
+        params.put("use_correct", bool01(searchRequest.getUseCorrect()));
+        params.put("last_search_page_interval", String.valueOf(searchRequest.getLastSearchPageInterval()));
+        params.put("line_words_num", String.valueOf(searchRequest.getLineWordsNum()));
+        params.put("tab_name", searchRequest.getTabName());
+        params.put("last_consume_interval", String.valueOf(searchRequest.getLastConsumeInterval()));
+        params.put("pad_column_cover", String.valueOf(searchRequest.getPadColumnCover()));
+        params.put("is_first_enter_search", bool01(searchRequest.getIsFirstEnterSearch()));
 
-    // 添加search_id参数（如果存在）
-    if (searchRequest.getSearchId() != null && !searchRequest.getSearchId().trim().isEmpty()) {
-        params.put("search_id", searchRequest.getSearchId());
+        // 添加search_id参数（如果存在）
+        putTrimmedIfHasText(params, "search_id", searchRequest.getSearchId());
+
+        // 添加passback参数（与offset相同）
+        Integer passback = Objects.requireNonNullElse(searchRequest.getPassback(), searchRequest.getOffset());
+        params.put("passback", String.valueOf(passback));
+
+        // 添加tab_type参数
+        putIfNotNull(params, "tab_type", searchRequest.getTabType());
+
+        // 只在is_first_enter_search为true时添加client_ab_info
+        if (Boolean.TRUE.equals(searchRequest.getIsFirstEnterSearch())) {
+            params.put("client_ab_info", searchRequest.getClientAbInfo()); // JSON需编码
+        }
+
+        params.put("normal_session_id", searchRequest.getNormalSessionId());
+        params.put("cold_start_session_id", searchRequest.getColdStartSessionId());
+        params.put("charging", String.valueOf(searchRequest.getCharging()));
+        params.put("screen_brightness", String.valueOf(searchRequest.getScreenBrightness()));
+        params.put("battery_pct", String.valueOf(searchRequest.getBatteryPct()));
+        params.put("down_speed", String.valueOf(searchRequest.getDownSpeed()));
+        params.put("sys_dark_mode", String.valueOf(searchRequest.getSysDarkMode()));
+        params.put("app_dark_mode", String.valueOf(searchRequest.getAppDarkMode()));
+        params.put("font_scale", String.valueOf(searchRequest.getFontScale()));
+        params.put("is_android_pad_screen", String.valueOf(searchRequest.getIsAndroidPadScreen()));
+        params.put("network_type", String.valueOf(searchRequest.getNetworkType()));
+        params.put("current_volume", String.valueOf(searchRequest.getCurrentVolume()));
+        return params;
     }
-
-    // 添加passback参数（与offset相同）
-    if (searchRequest.getPassback() != null) {
-        params.put("passback", String.valueOf(searchRequest.getPassback()));
-    } else {
-        // 如果没有设置passback，使用offset的值
-        params.put("passback", String.valueOf(searchRequest.getOffset()));
-    }
-
-    // 添加tab_type参数
-    if (searchRequest.getTabType() != null) {
-        params.put("tab_type", String.valueOf(searchRequest.getTabType()));
-    }
-
-    // 只在is_first_enter_search为true时添加client_ab_info
-    if (Boolean.TRUE.equals(searchRequest.getIsFirstEnterSearch())) {
-        params.put("client_ab_info", searchRequest.getClientAbInfo()); // JSON需编码
-    }
-
-    params.put("normal_session_id", searchRequest.getNormalSessionId());
-    params.put("cold_start_session_id", searchRequest.getColdStartSessionId());
-    params.put("charging", String.valueOf(searchRequest.getCharging()));
-    params.put("screen_brightness", String.valueOf(searchRequest.getScreenBrightness()));
-    params.put("battery_pct", String.valueOf(searchRequest.getBatteryPct()));
-    params.put("down_speed", String.valueOf(searchRequest.getDownSpeed()));
-    params.put("sys_dark_mode", String.valueOf(searchRequest.getSysDarkMode()));
-    params.put("app_dark_mode", String.valueOf(searchRequest.getAppDarkMode()));
-    params.put("font_scale", String.valueOf(searchRequest.getFontScale()));
-    params.put("is_android_pad_screen", String.valueOf(searchRequest.getIsAndroidPadScreen()));
-    params.put("network_type", String.valueOf(searchRequest.getNetworkType()));
-    params.put("current_volume", String.valueOf(searchRequest.getCurrentVolume()));
-    return params;
-}
 
     private static String bool01(Boolean value) {
         return Boolean.TRUE.equals(value) ? "1" : "0";
@@ -324,7 +325,7 @@ public Map<String, String> buildSearchParams(FqVariable var, FQSearchRequest sea
      * @param directoryRequest 目录请求参数
      * @return 参数映射
      */
-    public Map<String, String> buildDirectoryParams(FqVariable var, com.anjia.unidbgserver.dto.FQDirectoryRequest directoryRequest) {
+    public Map<String, String> buildDirectoryParams(FqVariable var, FQDirectoryRequest directoryRequest) {
         Map<String, String> params = buildCommonApiParams(var);
 
         // 目录特定参数
@@ -339,22 +340,18 @@ public Map<String, String> buildSearchParams(FqVariable var, FQSearchRequest sea
         Boolean needVersion = directoryRequest.getNeedVersion();
         boolean minimalResponse = Boolean.TRUE.equals(directoryRequest.getMinimalResponse());
         String bookId = directoryRequest.getBookId();
-        boolean finalNeedVersion = minimalResponse ? Boolean.FALSE : (needVersion != null ? needVersion : Boolean.TRUE);
+        boolean finalNeedVersion = minimalResponse
+            ? false
+            : Objects.requireNonNullElse(needVersion, Boolean.TRUE);
 
-        params.put("book_type", String.valueOf(bookType != null ? bookType : 0));
-        params.put("book_id", bookId != null ? bookId : "");
+        params.put("book_type", String.valueOf(intOrDefault(bookType, 0)));
+        params.put("book_id", Texts.nullToEmpty(bookId));
         params.put("need_version", String.valueOf(finalNeedVersion));
 
         // 可选MD5参数
-        if (Texts.hasText(directoryRequest.getItemDataListMd5())) {
-            params.put("item_data_list_md5", directoryRequest.getItemDataListMd5().trim());
-        }
-        if (Texts.hasText(directoryRequest.getCatalogDataMd5())) {
-            params.put("catalog_data_md5", directoryRequest.getCatalogDataMd5().trim());
-        }
-        if (Texts.hasText(directoryRequest.getBookInfoMd5())) {
-            params.put("book_info_md5", directoryRequest.getBookInfoMd5().trim());
-        }
+        putTrimmedIfHasText(params, "item_data_list_md5", directoryRequest.getItemDataListMd5());
+        putTrimmedIfHasText(params, "catalog_data_md5", directoryRequest.getCatalogDataMd5());
+        putTrimmedIfHasText(params, "book_info_md5", directoryRequest.getBookInfoMd5());
 
         return params;
     }
@@ -380,5 +377,26 @@ public Map<String, String> buildSearchParams(FqVariable var, FQSearchRequest sea
             return "";
         }
         return baseUrl.replace("api5-normal-sinfonlineb", "api5-normal-sinfonlinec");
+    }
+
+    private static int intOrDefault(Integer value, int defaultValue) {
+        return value != null ? value : defaultValue;
+    }
+
+    private static void putTrimmedIfHasText(Map<String, String> params, String key, String value) {
+        String trimmed = Texts.trimToNull(value);
+        if (trimmed != null) {
+            params.put(key, trimmed);
+        }
+    }
+
+    private static void putIfNotNull(Map<String, String> params, String key, Object value) {
+        if (value != null) {
+            params.put(key, String.valueOf(value));
+        }
+    }
+
+    private static <T, R> R safeGet(T source, Function<T, R> getter) {
+        return source == null ? null : getter.apply(source);
     }
 }
